--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "project_3_backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.15.1"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
